--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,8 @@ uvicorn==0.38.0
 weasyprint==66.0
 webencodings==0.5.1
 zopfli==0.2.3.post1
+fastapi
+uvicorn
+jinja2
+weasyprint
+python-multipart
